# http-seekable-file

./: .gitignore  pyproject.toml
httpseekablefile/: AsyncSeekableHTTPFile.py  __init__.py
tests/: tests_asyncseekablehttpfile.py
