[tool.poetry]
name = "http-seekable-file"
version = "0.2.0"
description = "Provides file-like seekable interface for HTTP(S) URLs in sync and async fashion"
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>"]
packages = [
    { include = "httpseekablefile" }
]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = { version = "^3.6", optional = true }
requests = { version = "^2.22", optional = true }

[tool.poetry.extras]
async = ["aiohttp"]
sync = ["requests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
