[tool.poetry]
name = "httpseekablefile"
version = "0.3.0"
description = "Provides file-like seekable interface for HTTP(S) URLs in sync and async fashion"
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = { version = "^3.6", optional = true }
requests = { version = "^2.22", optional = true }

[tool.poetry.extras]
async = ["aiohttp"]
sync = ["requests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
